# floquet-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: README.md  bench_batched_construction.py  bench_batched_eigh.py  bench_curvature_vs_hfe.py  bench_quasienergy_spectrum.py  bench_velocity_map_parallel.py  bench_velocity_vs_hfe.py  profile_current.py  time_polar_map.py
benchmarks/results/: .gitignore
docs/: ARCHITECTURE.md  PERFORMANCE.md
examples/: plot_dirac_curvature_vs_amplitude.ipynb  plot_dirac_curvature_vs_amplitude.py  plot_spectra.ipynb  plot_spectra.py
floquet_toolkit/: __init__.py  builtin_models.py  config.py  floquet_manager.py
floquet_toolkit/builders/: __init__.py  floquet_builder.py  hfe_builder.py
floquet_toolkit/builtin_models/: __init__.py  base.py  base_model.py  dirac.py  graphene.py  rotating_frame_dirac.py
floquet_toolkit/calculators/: __init__.py  floquet_berry_phase_calculator.py  floquet_current_calculator.py  floquet_curvature_calculator.py  floquet_perturbation_calculator.py  floquet_spectrum_calculator.py  floquet_state_provider.py  floquet_velocity_calculator.py
floquet_toolkit/core/: __init__.py  driven_bloch_hamiltonian.py
floquet_toolkit/managers/: __init__.py  floquet_local_manager.py  floquet_manager.py  floquet_transport_manager.py
floquet_toolkit/utils/: __init__.py  drive_fields.py  geometry.py  kquadrature.py  kspace.py  parallel.py
tests/: test_benchmark_snapshots.py  test_builtin_model_classes.py  test_curvature_convergence.py  test_drive_fields.py  test_floquet_builder.py  test_geometry.py  test_graphene_bz_grid.py  test_velocity_batched.py
(+9 files in other folders)
